--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,7 @@
 {
     "require": {
-        "sentry/sentry": "^1.10"
+        "sentry/sentry": "^2.2",
+        "php-http/curl-client": "^2.0",
+        "guzzlehttp/psr7": "^1.6"
     }
 }
